lab1/Test/L1-A-0-51.cmm
struct ZbCGswo_KpoIQ Go ( int BKoaBaBbJ6UQw5EuH ) 
  {
  return ! hni8 / m9NW * G3XDNLFTg / UGVKB6YaoSOlF2KgcO1N 
    / qYe * XYMSFSL * `z7YrB / MGlx5xX0AmR6ooK + MKQfSfO3OE_3QnEO 
    > O6sozN8GMurCqzCoz7d && T8cH1d4DOVldkC ;
  if ( ESzCtKdirYUyDxX )   Sc4H3dAO ;
else :  NTOMP2N ;

}
struct _y3j2WKCe0MOlM {
  struct {
  }e_B7btdan8 = b1eEKH2DKvqkJxc , Qg2RniM2_o4ha47r_ 
    ;
}WQSPbsXc_s71_JhchV , hIYvsC , YMibKG4bIOqoJOBtl 


;
float WUqR6AoXInWV6UCWR_ '( ) {
}
float jmV9S_7Ao_VGr_k [ 961018495 ] 
;
